UPDATE - All CRUD

--- a/views/allusers.hbs
+++ b/views/allusers.hbs
@@ -28,7 +28,7 @@
               <td>{{email}}</td>
               <td>{{password}}</td>
               <td>{{phone}}</td>
-              <td>{{_id}}</td>
+              <td><a href="/users/all/{{_id}}">{{_id}}</a></td>
             </tr>
               {{/each}}
           </tbody>
