--- a/views/users.hbs
+++ b/views/users.hbs
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group row">
               <div class="offset-sm-2 col-sm-10">
-                <button type="submit" class="btn btn-primary">Sign in</button>
+                <button type="submit" class="btn btn-primary">Add User</button>
               </div>
             </div>
           </form>
